# vault-client

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  bors.toml  run-in-docker.sh  vault.config
.github/: dependabot.yml
examples/: token_agent.rs
src/: cache.rs  errors.rs  lib.rs  registry.rs
src/secret/: mod.rs  pki.rs  token.rs
test/certificates/: privkey.pem  root.cer  vault-ca.conf  vault.crt  vault.csr  vault.key
vault-api/: .swagger-codegen-ignore  Cargo.toml  Makefile  README.md
vault-api/.cargo/: config
vault-api/.openapi-generator/: FILES
vault-api/api/: openapi.yaml
vault-api/docs/: AuthCertLoginParameters.md  AuthResponse.md  AuthResponseAllOf.md  AuthResponseAllOfAuth.md  AuthResponseAuth.md  CertificateResponse.md  CertificateResponseAllOf.md  CertificateResponseAllOfData.md  CertificateResponseData.md  CommonResponse.md  CreateTokenParameters.md  GenerateCertificateParameters.md  GenerateCertificateResponse.md  GenerateCertificateResponseAllOf.md  GenerateCertificateResponseAllOfData.md  GenerateCertificateResponseData.md  LeasesApi.md  PkiBackendApi.md  RenewSelfParameters.md  RevokeLeaseParameters.md  TokenBackendApi.md  leases_api.md  pki_backend_api.md  token_backend_api.md
vault-api/examples/: client.rs  server.rs
vault-api/examples/client/: main.rs
vault-api/examples/server/: main.rs  server.rs
vault-api/examples/server_lib/: mod.rs  server.rs
vault-api/src/: base64_format.rs  client.rs  lib.rs  mimetypes.rs  models.rs  server.rs
vault-api/src/apis/: client.rs  configuration.rs  leases_api.rs  mod.rs  pki_backend_api.rs  token_backend_api.rs
vault-api/src/client/: mod.rs
vault-api/src/server/: mod.rs
