[package]
authors = ["Metaswitch Networks Ltd"]
name = "vault_client"
publish = false
version = "0.3.0"
license = "Apache-2.0/MIT"
readme = "README.md"

[dependencies]
atomicwrites = "0.2.1"
error-chain = "0.11.0"
futures = "0.1.13"
futures-error-chain = "0.1.0"
futures-mutex = "0.2.0"
httpdate = "0.3.2"
log = "0.3.8"
openssl = "0.10.7"
pinboard = "2.0.0"
serde = "1.0"
serde_derive = "1.0.7"
serde_json = "1.0.2"
tokio-core = "0.1.7"
tokio-timer = "0.1.1"
url = "1.4.0"

[dependencies.vault-api]
path = "vault-api"

[dev-dependencies]
tempfile = "2.1.5"

[workspace]
